--- a/src/components/FeaturedRepos.astro
+++ b/src/components/FeaturedRepos.astro
@@ -135,8 +135,8 @@ const { class: className = '' } = Astro.props;
   li {
     align-content: stretch;
     border-radius: 4px;
-    border: solid 1px var(--color-light-gray);
-    color: var(--color-dark-gray);
+    border: solid 1px var(--border-subtle);
+    color: var(--text-secondary);
     display: flex;
     flex-flow: column nowrap;
     font-size: 1rem;
@@ -148,13 +148,11 @@ const { class: className = '' } = Astro.props;
   }
 
   a {
-    color: var(--color-primary);
+    color: var(--text-link);
     display: block;
     font-size: 1em;
     font-weight: 600;
-    text-decoration-color: hsl(
-      var(--primary-hue) var(--primary-sat) var(--primary-lit) / 0
-    );
+    text-decoration-color: transparent;
   }
   a:where(:hover, :focus) {
     text-decoration-color: currentColor;
