--- a/src/components/PostMeta.astro
+++ b/src/components/PostMeta.astro
@@ -27,7 +27,7 @@ const friendlyDate = new Intl.DateTimeFormat('en-US', options).format(
 <style>
   p {
     display: block;
-    color: var(--color-text-secondary);
+    color: var(--text-secondary);
     font-size: 0.875rem;
     line-height: normal;
     margin-block: 0;
