--- a/src/components/FeaturedPosts.astro
+++ b/src/components/FeaturedPosts.astro
@@ -40,7 +40,7 @@ const { class: className = '' } = Astro.props;
   }
 
   a {
-    color: var(--color-primary);
+    color: var(--text-link);
     font-weight: 500;
     text-decoration-color: transparent;
     transition: text-decoration 0.25s ease;
