fix: adjust line-height and fix type errors

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -131,7 +131,19 @@ const currentYear = new Intl.DateTimeFormat('en-US', {
     box-sizing: border-box;
   }
 
-  * {
+  /* * {
+    margin: 0;
+  } */
+  blockquote,
+  body,
+  dl,
+  dd,
+  figure,
+  h1,
+  h2,
+  h3,
+  h4,
+  p {
     margin: 0;
   }
 
