--- a/src/components/FeaturedRepos.astro
+++ b/src/components/FeaturedRepos.astro
@@ -26,8 +26,8 @@ const repos = Promise.all(
   reposData
     .filter((repo) => !repo.fork && !repo.archived)
     .sort((a, b) => {
-      const r1: number = a.watchers_count ? a.watchers_count : 0;
-      const r2: number = b.watchers_count ? b.watchers_count : 0;
+      const r1 = a.watchers_count ?? 0;
+      const r2 = b.watchers_count ?? 0;
 
       return r2 - r1;
     })
@@ -49,7 +49,12 @@ const repos = Promise.all(
           repo: name,
         });
         const langsObj: repoLanguagesResponse['data'] = res.data;
-        const totalSize = Object.values(langsObj).reduce((a, b) => a + b, 0);
+        const totalSize = Object.values(langsObj).reduce((a, b) => {
+          const l1 = a ?? 0;
+          const l2 = b ?? 0;
+
+          return l1 + l2;
+        }, 0);
         const languages = Object.entries(langsObj).map(([key, val]) => ({
           totalSize,
           name: key,
@@ -77,22 +82,26 @@ const { class: className = '' } = Astro.props;
 <ol class={className} role="list">
   {
     featuredRepos.map((repo) => {
-      const stars_count = repo.stargazers_count ? repo.stargazers_count : 0;
-      const forks_count = repo.forks_count ? repo.forks_count : 0;
+      const stars_count = repo.stargazers_count ?? 0;
+      const forks_count = repo.forks_count ?? 0;
       return (
         <li>
           <a href={repo.html_url}>{repo.name}</a>
           <p class="description">{repo.description}</p>
           <p class="metadata">
-            {repo.languages.map((lang) => (
-              <span>
-                <span class="lang">{lang.name}</span>
+            {repo.languages.map((lang) => {
+              const langSize = lang.size ?? 0;
+              const totalSize = lang.totalSize ?? 0;
+              const langPercent =
+                Math.round((langSize / totalSize) * 100 * 10) / 10 || 0;
+
+              return (
                 <span>
-                  {Math.round((lang.size / lang.totalSize) * 100 * 10) / 10 ||
-                    0}%
+                  <span class="lang">{lang.name}</span>
+                  <span>{langPercent}%</span>
                 </span>
-              </span>
-            ))}
+              );
+            })}
             {stars_count > 0 ? (
               <span>
                 <Icon
@@ -140,7 +149,7 @@ const { class: className = '' } = Astro.props;
     display: flex;
     flex-flow: column nowrap;
     font-size: 1rem;
-    padding: 1em;
+    padding: 1em 1em 1.2em;
   }
 
   li > :not(.metadata) {
@@ -166,6 +175,7 @@ const { class: className = '' } = Astro.props;
 
   .metadata {
     font-size: 0.75em;
+    line-height: calc(1ex / 0.32);
     margin: 0;
   }
   .metadata * {
