--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,7 +17,7 @@ const currentYear = new Intl.DateTimeFormat('en-US', {
 }).format(new Date());
 ---
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -82,7 +82,7 @@ const currentYear = new Intl.DateTimeFormat('en-US', {
         <p>
           <a href="https://github.com/jeffwinegar/personal-site">source code</a>
         </p>
-        <ColorSchemeToggle client:load />
+        <ColorSchemeToggle client:only="preact" />
       </div>
       <div>
         <p>Jeff Winegar &copy; 2010 - {currentYear}</p>
@@ -131,9 +131,6 @@ const currentYear = new Intl.DateTimeFormat('en-US', {
     box-sizing: border-box;
   }
 
-  /* * {
-    margin: 0;
-  } */
   blockquote,
   body,
   dl,
@@ -169,10 +166,23 @@ const currentYear = new Intl.DateTimeFormat('en-US', {
   }
 
   body {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
-      Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Fira Sans',
-      'Droid Sans', 'Helvetica Neue', sans-serif, 'Apple Color Emoji',
-      'Segoe UI Emoji', 'Segoe UI Symbol';
+    font-family:
+      system-ui,
+      -apple-system,
+      BlinkMacSystemFont,
+      'Segoe UI',
+      Roboto,
+      Oxygen,
+      Ubuntu,
+      Cantarell,
+      'Open Sans',
+      'Fira Sans',
+      'Droid Sans',
+      'Helvetica Neue',
+      sans-serif,
+      'Apple Color Emoji',
+      'Segoe UI Emoji',
+      'Segoe UI Symbol';
     line-height: calc(1ex / 0.32);
     min-height: 100vh;
     padding-block-start: calc(1ex / 0.32);
@@ -244,7 +254,8 @@ const currentYear = new Intl.DateTimeFormat('en-US', {
   :focus-visible {
     border-radius: 2px;
     box-decoration-break: clone;
-    box-shadow: 0 0 0 2px var(--surface-primary),
+    box-shadow:
+      0 0 0 2px var(--surface-primary),
       0 0 0 4px var(--palette-primary);
     margin-inline: -1px;
     outline: none;
