feat: update copy on index

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -45,15 +45,16 @@ const yrsExp: number =
     <FeaturedRepos class="grid-full-width" />
 
     <p>
-      I am currently a Senior Web Developer at Wunderman Thompson where I do
-      hands-on development and lead teams working for clients including Genesis,
-      Hyundai, Mazda, Shell, Snap, and Synchrony Bank in projects that span from
-      micro-sites, landing pages, and site components to responsive dynamic
-      data-driven emails and animated banner ads.
+      Through my career I have done hands-on development and lead teams working
+      for clients including Genesis, Hyundai, Mazda, Shell, Snap, Synchrony
+      Bank, and T&#8209;Mobile in projects that span from micro-sites, landing
+      pages, and site components to responsive dynamic data-driven emails and
+      animated banner ads.
     </p>
 
     <p>
-      If you'd like to see more of my contributions, take a look on <a
+      I am currently available for full-time or contract opportunities. If you'd
+      like to see more of my contributions, take a look on <a
         href="https://github.com/jeffwinegar">my GitHub profile</a
       >. You can also see my work history on <a
         href="https://www.linkedin.com/in/jeffwinegar">LinkedIn</a
