feat: add border to code meta

--- a/src/pages/[slug].astro
+++ b/src/pages/[slug].astro
@@ -95,6 +95,7 @@ const { Content, headings } = await post.render();
 
   .code-title,
   .language-id {
+    border-block-end: solid 1px var(--_code-highlight-background);
     color: var(--_code-color-meta);
     font-size: 0.7222222222em;
     grid-row: 1;
